<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/linear_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/correct_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="发音解析" />
        <TextView
            android:id="@+id/correct_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="ruler" />

        <ImageView
            android:id="@+id/correct_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:src="@mipmap/sen_eval_close" />
    </RelativeLayout>

    <TextView
        android:id="@+id/correct_sentence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="8dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="I have a ruler" />
    <TextView
        android:id="@+id/text_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="18dp"
        android:textColor="#B1B1B1"
        android:textSize="12sp"
        android:text="点击每个单词可查看发音解析" />

    <LinearLayout
        android:id="@+id/correct_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="18dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/correct_oral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#525252"
            android:textSize="16sp"
            android:text="@string/eval_ok_sound" />
        <ImageView
            android:id="@+id/img_speaker"
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:scaleType="fitXY"
            android:src="@mipmap/sen_eval_sound" />
    </LinearLayout>

    <TextView
        android:id="@+id/self_oral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="18dp"
        android:textColor="#525252"
        android:textSize="16sp"
        android:text="@string/eval_self_sound" />

    <TextView
        android:id="@+id/word_define"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="18dp"
        android:textColor="#525252"
        android:textSize="16sp"
        android:text="@string/eval_word_dict" />

    <TextView
        android:id="@+id/word_read"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/eval_read_bkg"
        android:textColor="#3D3D3D"
        android:textSize="16sp"
        android:gravity="center"
        android:text="再试着跟读一遍这个单词吧" />

    <RelativeLayout
        android:id="@+id/eval_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="18dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >
        <LinearLayout
            android:id="@+id/ll_reader"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="18dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/read_speaker"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:scaleType="fitXY"
                android:src="@mipmap/sen_eval_play" />
            <TextView
                android:id="@+id/read_hint"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="听原音" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_eval"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/eval_speaker"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitXY"
                android:src="@mipmap/sen_eval_mic" />
            <TextView
                android:id="@+id/eval_hint"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_marginLeft="4dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:text="点击开始" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_score"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/user_speaker"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:scaleType="fitXY"
                android:src="@mipmap/sen_eval_user" />

            <TextView
                android:id="@+id/word_score"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="99" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lisa_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#E8F0EA"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/lisa_oral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#525252"
            android:textSize="14sp"
            android:text="查看专家Lisa博士对于发音的视频讲解" />

        <ImageView
            android:id="@+id/img_lisa"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="12dp"
            android:scaleType="fitXY"
            android:src="@mipmap/sen_eval_lisa" />
    </RelativeLayout>

</LinearLayout>
