<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:navigationIcon="@mipmap/img_back"
        app:titleTextColor="@color/white"
        />
    <!--听写界面-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listenView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:visibility="visible"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/listenLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/shape_round_white_10"

            app:layout_constraintWidth_percent=".8"
            app:layout_constraintVertical_bias=".1"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <ImageView
                android:id="@+id/audio"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_wordtest_audio_big"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="请根据音频内容，填写正确的单词"
                android:layout_below="@id/audio"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audio"
                />

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tips"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_round_gray_10"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:minHeight="50dp"
                android:singleLine="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:maxLength="30"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:digits="@string/exercise_limit_letter"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tips"
                />
            <LinearLayout
                android:id="@+id/showLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:visibility="invisible"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:text="正确答案："/>
                <TextView
                    android:id="@+id/word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="ruler"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/color_gray"
                android:textSize="16sp"
                android:text="1/10"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showLayout"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spell_again"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_round_white_10"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            tools:visibility="visible"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/next"
            app:layout_constraintTop_toBottomOf="@id/listenLayout"
            />
        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spell_next"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_round_white_10"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="15dp"
            android:visibility="visible"

            app:layout_constraintLeft_toRightOf="@id/again"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listenLayout"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--展示界面-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scoreLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
        <RelativeLayout
            android:id="@+id/msgLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_round_white_10"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="当前单元："
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@id/unit">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="单词数"
                        android:textColor="@color/color_gray"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/totalCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="20"/>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider_line"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="正确数"
                        android:textColor="@color/color_gray"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/rightCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="20"/>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider_line"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="分数"
                        android:textColor="@color/color_gray"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/rightRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="20"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="重新听写"
            android:textColor="@color/white"
            android:background="@drawable/answer_btn_press"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="14sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/msgLayout"
            app:layout_constraintRight_toLeftOf="@id/share"
            />
        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分享成绩"
            android:textColor="@color/white"
            android:background="@drawable/answer_btn_press"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="14sp"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/reset"
            app:layout_constraintBottom_toBottomOf="@id/reset"
            app:layout_constraintLeft_toRightOf="@id/reset"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_round_white_10"
            android:gravity="center_horizontal"
            android:orientation="vertical"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="单词听写结果"
                android:layout_marginTop="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_line"
                android:layout_marginTop="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:overScrollMode="never"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>